--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://helloworld-hellohyeon.github.io/humanscape_subject",
   "name": "humanscape-subject",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^18.0.4",
     "@types/react-dom": "^18.0.0",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
